--- a/characters.html
+++ b/characters.html
@@ -12,23 +12,23 @@
 </head>
 
 <body>
-  <section class="container-fluid">
-    <nav class="navbar navbar-expand-sm d-flex justify-content-around text-decoration-underline">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#"><p class=pnav>Home</p></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"><p class="pnav mark">Characters</p></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"><p class=pnav>Gallery</p></a>
-        </li>
-      </ul>
-      </nav>
+    <section class="container-fluid">
+        <nav class="navbar navbar-expand-sm d-flex justify-content-around text-decoration-underline">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="home.html"><p class="pnav">Home</p></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="characters.html"><p class="pnav mark">Characters</p></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="gallery.html"><p class=pnav>Gallery</p></a>
+            </li>
+          </ul>
+          </nav>
       
       <div class="p-5 text-black text-center">
-      <h2>Characters</h2> 
+      <h2><mark>Characters</mark></h2> 
     </div>
       
     <section class="container my-5 text-center">
