--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@1&display=swap" rel="stylesheet">
-<link href="assignment2.CSS"
+<link href="assignment-two.css"
 </head>
 
 <body>
